<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            app:srcCompat="@drawable/eplane_logo"
            android:contentDescription="@string/the_eplane_co"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_verification"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/enter_phone_number"
            android:textSize="14sp"
            android:textColor="#666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:hint="@string/_9812345678"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/input_mobile_number"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/get_otp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/get_otp"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/number_progress"/>

        </FrameLayout>

    </LinearLayout>

  </ScrollView>