<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterOtp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            app:srcCompat="@drawable/eplane_logo"
            android:contentDescription="@string/the_eplane_co"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_verification"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/enter_otp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp1"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp2"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp3"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp4"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp5"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:id="@+id/input_otp6"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_otp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:id="@+id/text_resend_otp"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/verify"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/verify_otp"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/otp_progress"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>